# insta_scraper

./: .gitignore  README.md  open_opera_gx_scraper.bat  package.json  pyproject.toml  tmp_exec_query.py  tmp_verify_run.py
app/: __main__.py  dev_server.py
app/anti_block/: challenge_handler.py  proxy_manager.py  session_manager.py
app/api/: main.py
app/api/static/: index.html
app/collectors/: about_scraper.py  grid_enumerator.py  highlight_scraper.py  link_expander.py  post_detail_scraper.py  profile_scraper.py  timeline_snapshot.py
app/core/: config.py  models.py  url_validator.py
app/exporters/: csv_exporter.py  xlsx_exporter.py
app/metrics/: aggregator.py
app/runner/: orchestrator.py
app/storage/: sqlite_store.py
scripts/vpn/: open_opera_scraper.bat  vpn_calibrate.ahk  vpn_rotate.ahk  vpn_rotate.bat
tests/: test_aggregator.py  test_export_contract.py  test_parser_contracts.py  test_resume_flow.py  test_url_validator.py
